--- a/CRUD_NP_PracticeCMS/appsettings.json
+++ b/CRUD_NP_PracticeCMS/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+    "ConnectionStrings": {
+      "DefaultConnection": "Server=192.168.1.77;Database=PeopleEssence;User ID=sa;Password=sa@123;MultipleActiveResultSets=False;TrustServerCertificate=True;"
+    }
 }
